--- a/WebContent/htmls/test.html
+++ b/WebContent/htmls/test.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-Hi Guys, Good Morning,  happy hearts day.pragathi 
+Hi Guys, Good Morning,  happy hearts day.
   
 </body>
 </html>
